2008-02-15  J. Tang  <jtang@tresys.com>

	* Synced libqpol to libsepol version 2.0.20.  The configure script
	will check if dynamic avtabs exist (introduced in libsepol 2.0.20)
	and will adjust policy loading as necessary.

2008-01-09  J. Tang  <jtang@tresys.com>

	* Added initial attempt at Debian-izing SETools.  The Debian
	control files are only present in the SVN checkout of SETools, not
	in the distributed tarball.

2008-01-07  J. Tang  <jtang@tresys.com>

	* Changed sechecker's compilation system to one based upon
	libtool.  Modules are now installed in $(PREFIX)/lib/setools
	instead of $(PREFIX)/share/setools.

2008-01-02  J. Tang  <jtang@tresys.com>

	* Added conditional expression simplification algorithm to
	libapol.  See apol/cond-simplify.h.

2007-12-10  J. Tang  <jtang@tresys.com>

	* Apol help files are now formatted using HTML instead of plain
	text files.

	* Renamed relabel_module.tcl to file_relabel_module.tcl.  Changed
	the name with apol from "Direct Relabel" to "File Relabel".

2007-12-06  J. Tang  <jtang@tresys.com>

	* Added Tkhtml 3.0 requirement to apol.  This is used to render
	the help files and dynamically generated reports.  If the user
	does not have Tkhtml installed, the one provided in the packages
	subdirectory will be used instead.

2007-12-03  J. Tang  <jtang@tresys.com>

	* Apol permission map files are now part of libapol rather than
	apol; this way they can be used if the user installs just
	the setools-libs RPM package instead of setools-gui.

	* Fixed error in apol where searching for type rules ignored the
	'set source as any' option.

	* Added seaudit_filter_set_enabled(),
	seaudit_filter_get_enabled(), and seaudit_filter_clear() to
	libseaudit.

	* Added ability to enable/disable on a per-filter basis in
	seaudit.  Added ability to set strict matching behavior
	per-filter.  Modified clear button to operate on the entire
	filter, instead of per tab.

2007-11-30  J. Tang  <jtang@tresys.com>
